src/info/remenska/PASS/monitor/mCRL2/mucalculusParser.java
// Generated from info/remenska/PASS/monitor/mCRL2/mucalculus.g4 by ANTLR 4.1
package info.remenska.PASS.monitor.mCRL2;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class mucalculusParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__66=1, T__65=2, T__64=3, T__63=4, T__62=5, T__61=6, T__60=7, T__59=8, 
		T__58=9, T__57=10, T__56=11, T__55=12, T__54=13, T__53=14, T__52=15, T__51=16, 
		T__50=17, T__49=18, T__48=19, T__47=20, T__46=21, T__45=22, T__44=23, 
		T__43=24, T__42=25, T__41=26, T__40=27, T__39=28, T__38=29, T__37=30, 
		T__36=31, T__35=32, T__34=33, T__33=34, T__32=35, T__31=36, T__30=37, 
		T__29=38, T__28=39, T__27=40, T__26=41, T__25=42, T__24=43, T__23=44, 
		T__22=45, T__21=46, T__20=47, T__19=48, T__18=49, T__17=50, T__16=51, 
		T__15=52, T__14=53, T__13=54, T__12=55, T__11=56, T__10=57, T__9=58, T__8=59, 
		T__7=60, T__6=61, T__5=62, T__4=63, T__3=64, T__2=65, T__1=66, T__0=67, 
		ID=68, INT=69, WS=70, LINE_COMMENT=71;
	public static final String[] tokenNames = {
		"<INVALID>", "'eqn'", "'*'", "'['", "'<'", "'List'", "'false'", "'!='", 
		"'<='", "'nil'", "'Bool'", "'cons'", "'}'", "'->'", "')'", "'Nat'", "'whr'", 
		"'Bag'", "'@'", "'Pos'", "'map'", "'='", "'div'", "'FSet'", "'Int'", "'yaled'", 
		"'val'", "'mod'", "'|'", "'!'", "']'", "'lambda'", "'in'", "','", "'-'", 
		"':'", "'('", "'var'", "'?'", "'{'", "'sort'", "'|>'", "'true'", "'++'", 
		"'struct'", "'<|'", "'Set'", "'tau'", "'.'", "'=>'", "'+'", "'glob'", 
		"'forall'", "';'", "'&&'", "'delay'", "'nu'", "'||'", "'exists'", "'>'", 
		"'Real'", "'FBag'", "'=='", "'/'", "'>='", "'#'", "'end'", "'mu'", "ID", 
		"INT", "WS", "LINE_COMMENT"
	};
	public static final int
		RULE_start = 0, RULE_fixedPointOperator = 1, RULE_dataValExpr = 2, RULE_regFrm = 3, 
		RULE_varsDeclList = 4, RULE_varsDecl = 5, RULE_stateFrm = 6, RULE_actFrm = 7, 
		RULE_stateVarDecl = 8, RULE_stateVarAssignment = 9, RULE_stateVarAssignmentList = 10, 
		RULE_dataExprList = 11, RULE_dataExpr = 12, RULE_multAct = 13, RULE_bagEnumEltList = 14, 
		RULE_bagEnumElt = 15, RULE_assignmentList = 16, RULE_varDecl = 17, RULE_idList = 18, 
		RULE_actionList = 19, RULE_sortExpr = 20, RULE_assignment = 21, RULE_action = 22, 
		RULE_simpleSortExpr = 23, RULE_hashArgs = 24, RULE_constrDeclList = 25, 
		RULE_constrDecl = 26, RULE_projDecl = 27, RULE_projDeclList = 28, RULE_dataSpec = 29, 
		RULE_globVarSpec = 30, RULE_varSpec = 31, RULE_eqnSpec = 32, RULE_eqnDecl = 33, 
		RULE_sortSpec = 34, RULE_consSpec = 35, RULE_mapSpec = 36, RULE_sortDecl = 37, 
		RULE_idsDecl = 38;
	public static final String[] ruleNames = {
		"start", "fixedPointOperator", "dataValExpr", "regFrm", "varsDeclList", 
		"varsDecl", "stateFrm", "actFrm", "stateVarDecl", "stateVarAssignment", 
		"stateVarAssignmentList", "dataExprList", "dataExpr", "multAct", "bagEnumEltList", 
		"bagEnumElt", "assignmentList", "varDecl", "idList", "actionList", "sortExpr", 
		"assignment", "action", "simpleSortExpr", "hashArgs", "constrDeclList", 
		"constrDecl", "projDecl", "projDeclList", "dataSpec", "globVarSpec", "varSpec", 
		"eqnSpec", "eqnDecl", "sortSpec", "consSpec", "mapSpec", "sortDecl", "idsDecl"
	};

	@Override
	public String getGrammarFileName() { return "mucalculus.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public mucalculusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public StateFrmContext stateFrm() {
			return getRuleContext(StateFrmContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); stateFrm(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FixedPointOperatorContext extends ParserRuleContext {
		public FixedPointOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fixedPointOperator; }
	 
		public FixedPointOperatorContext() { }
		public void copyFrom(FixedPointOperatorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MuOperatorContext extends FixedPointOperatorContext {
		public MuOperatorContext(FixedPointOperatorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterMuOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitMuOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitMuOperator(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NuOperatorContext extends FixedPointOperatorContext {
		public NuOperatorContext(FixedPointOperatorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterNuOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitNuOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitNuOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FixedPointOperatorContext fixedPointOperator() throws RecognitionException {
		FixedPointOperatorContext _localctx = new FixedPointOperatorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_fixedPointOperator);
		try {
			setState(82);
			switch (_input.LA(1)) {
			case 67:
				_localctx = new MuOperatorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(80); match(67);
				}
				break;
			case 56:
				_localctx = new NuOperatorContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81); match(56);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataValExprContext extends ParserRuleContext {
		public DataExprContext myDataExpr;
		public DataExprContext dataExpr() {
			return getRuleContext(DataExprContext.class,0);
		}
		public DataValExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataValExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterDataValExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitDataValExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitDataValExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataValExprContext dataValExpr() throws RecognitionException {
		DataValExprContext _localctx = new DataValExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataValExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(26);
			setState(85); match(36);
			setState(86); ((DataValExprContext)_localctx).myDataExpr = dataExpr(0);
			setState(87); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegFrmContext extends ParserRuleContext {
		public int _p;
		public RegFrmContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RegFrmContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_regFrm; }
	 
		public RegFrmContext() { }
		public void copyFrom(RegFrmContext ctx) {
			super.copyFrom(ctx);
			this._p = ctx._p;
		}
	}
	public static class IterationRegFormContext extends RegFrmContext {
		public RegFrmContext regFrm() {
			return getRuleContext(RegFrmContext.class,0);
		}
		public IterationRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterIterationRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitIterationRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitIterationRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NilRegFormContext extends RegFrmContext {
		public NilRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterNilRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitNilRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitNilRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NonEmptyIterationRegFormContext extends RegFrmContext {
		public RegFrmContext regFrm() {
			return getRuleContext(RegFrmContext.class,0);
		}
		public NonEmptyIterationRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterNonEmptyIterationRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitNonEmptyIterationRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitNonEmptyIterationRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AlternativeCompositionRegFormContext extends RegFrmContext {
		public List<RegFrmContext> regFrm() {
			return getRuleContexts(RegFrmContext.class);
		}
		public RegFrmContext regFrm(int i) {
			return getRuleContext(RegFrmContext.class,i);
		}
		public AlternativeCompositionRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterAlternativeCompositionRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitAlternativeCompositionRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitAlternativeCompositionRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ActionFormulaRegFormContext extends RegFrmContext {
		public ActFrmContext actFrm() {
			return getRuleContext(ActFrmContext.class,0);
		}
		public ActionFormulaRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterActionFormulaRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitActionFormulaRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitActionFormulaRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SequentialCompositionRegFormContext extends RegFrmContext {
		public Token mySeqSign;
		public List<RegFrmContext> regFrm() {
			return getRuleContexts(RegFrmContext.class);
		}
		public RegFrmContext regFrm(int i) {
			return getRuleContext(RegFrmContext.class,i);
		}
		public SequentialCompositionRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterSequentialCompositionRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitSequentialCompositionRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitSequentialCompositionRegForm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketsRegFormContext extends RegFrmContext {
		public RegFrmContext regFrm() {
			return getRuleContext(RegFrmContext.class,0);
		}
		public BracketsRegFormContext(RegFrmContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterBracketsRegForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitBracketsRegForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitBracketsRegForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegFrmContext regFrm(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RegFrmContext _localctx = new RegFrmContext(_ctx, _parentState, _p);
		RegFrmContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, RULE_regFrm);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				_localctx = new BracketsRegFormContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(90); match(36);
				setState(91); regFrm(0);
				setState(92); match(14);
				}
				break;

			case 2:
				{
				_localctx = new ActionFormulaRegFormContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(94); actFrm(0);
				}
				break;

			case 3:
				{
				_localctx = new NilRegFormContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(95); match(9);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(108);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new SequentialCompositionRegFormContext(new RegFrmContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_regFrm);
						setState(98);
						if (!(2 >= _localctx._p)) throw new FailedPredicateException(this, "2 >= $_p");
						setState(99); ((SequentialCompositionRegFormContext)_localctx).mySeqSign = match(48);
						setState(100); regFrm(3);
						}
						break;

					case 2:
						{
						_localctx = new AlternativeCompositionRegFormContext(new RegFrmContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_regFrm);
						setState(101);
						if (!(1 >= _localctx._p)) throw new FailedPredicateException(this, "1 >= $_p");
						setState(102); match(50);
						setState(103); regFrm(2);
						}
						break;

					case 3:
						{
						_localctx = new IterationRegFormContext(new RegFrmContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_regFrm);
						setState(104);
						if (!(4 >= _localctx._p)) throw new FailedPredicateException(this, "4 >= $_p");
						setState(105); match(2);
						}
						break;

					case 4:
						{
						_localctx = new NonEmptyIterationRegFormContext(new RegFrmContext(_parentctx, _parentState, _p));
						pushNewRecursionContext(_localctx, _startState, RULE_regFrm);
						setState(106);
						if (!(3 >= _localctx._p)) throw new FailedPredicateException(this, "3 >= $_p");
						setState(107); match(50);
						}
						break;
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarsDeclListContext extends ParserRuleContext {
		public List<VarsDeclContext> varsDecl() {
			return getRuleContexts(VarsDeclContext.class);
		}
		public VarsDeclContext varsDecl(int i) {
			return getRuleContext(VarsDeclContext.class,i);
		}
		public VarsDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varsDeclList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).enterVarsDeclList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof mucalculusListener ) ((mucalculusListener)listener).exitVarsDeclList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof mucalculusVisitor ) return ((mucalculusVisitor<? extends T>)visitor).visitVarsDeclList(this);
			else return visitor.visitChildren(this);
		}
	}
